Opened 14 years ago
Closed 13 years ago
#6851 closed bug (fixed)
[Tracker] "Open parent folder" menu doesn't work for /boot
Reported by: | diver | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Tracker | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is hrev39554 gcc4hybrid.
- Tracker Settigns->Single window navigation.
- Open Haiku volume from Desktop.
- Window->Open parent folder doesn't work.
Note that Alt+Up in the same folder works for some time, but after several invocations of "Open parent folder" menu item this shortcut stops working.
Note:
See TracTickets
for help on using tickets.
Fixed in hrev43633. Thanks!